--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                 <p>Projects done</p>
             </div>
             <div class="item wow fadeInUpBig animated animated" data-number="55" style="visibility: visible;">
-                <i class="fa fa-smile-o"></i>
+                <i class="far fa-smile"></i>
                 <p id="number2" class="number">555</p>
                 <span></span>
                 <p>Happy clients</p>
